fix overflow-y

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   padding: 0;
   font-family: "Noto Sans TC", sans-serif;
   text-align: center;
-  overflow: hidden;
+  overflow-x: hidden;
 }
